--- a/src/main/resources/templates/listRol.html
+++ b/src/main/resources/templates/listRol.html
@@ -39,7 +39,7 @@
                                            class="btn btn-warning btn-sm" title="Editar">
                                             <i class="fas fa-edit"></i> Editar
                                         </a>
-                                        <a th:href="@{/roles/eliminar/{id}(id=${rol.idRol})}" 
+                                        <a th:href="@{/roles/{id}/eliminar(id=${rol.idRol})}"  
                                            class="btn btn-danger btn-sm" 
                                            onclick="return confirm('¿Estás seguro de eliminar este rol?')"
                                            title="Eliminar">
