--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -218,7 +218,7 @@
 
                 <button type="button" id="next-btn" onclick="redirectToLogin()">Siguiente</button>
 
-                <p>¿No tiene cuenta? <a th:href="@{/registrarse}">Regístrese aquí</a></p>
+                <p>¿No tiene cuenta? <a th:href="@{/registro}">Regístrese aquí</a></p>
 
                 <!-- Modal para trabajar el login del cliente o del empleao -->
                 <div id="loginModal" class="modal">
