--- a/src/main/resources/templates/registrarse.html
+++ b/src/main/resources/templates/registrarse.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | Nextclass</title>
-    <!--link rel="stylesheet" type="text/css" href="./css/login.css"-->
+    <title>Registro | Nextclass</title>
     <link th:include="components/link"></link>
+    <link rel="stylesheet" type="text/css" href="./css/login.css">
     <script>
         function validarDNI(input) {
             input.value = input.value.replace(/[^0-9]/g, '');
@@ -45,72 +45,52 @@
         window.onload = validarEnTiempoReal;
     </script>
 </head>
-<body >
-    
-
+<body>
     <div th:replace="components/mensajes :: mostrarMensaje(${error})" class="custom-alert"></div>
-
     <div class="body-login">
-    
         <div class="registro-container registro">
             <form action="/registrarse" method="POST" class="registro-form" id="FormRegistro" autocomplete="off" onsubmit="return verificarExistenciaYRegistrar(event)">
                 <h1>¡Registra tu cuenta!</h1>
                 <hr>
                 <p>Ingresa tus datos para registrarte</p>
-    
-                <div class="input-box registro-input-box">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" class="input registro-input" placeholder="Tu nombre" required />
+                <div class="registro-grid">
+                    <div class="input-box registro-input-box">
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" name="nombre" class="input registro-input" placeholder="Tu nombre" required />
+                    </div>
+                    <div class="input-box registro-input-box">
+                        <label for="apellidos">Apellidos:</label>
+                        <input type="text" id="apellidos" name="apellido" class="input registro-input" placeholder="Tus apellidos" required />
+                    </div>
+                    <div class="input-box registro-input-box">
+                        <label for="correo">Correo electrónico:</label>
+                        <input type="email" id="correo" name="correo" class="input registro-input" placeholder="Tu correo electrónico" required />
+                    </div>
+                    <div class="input-box registro-input-box">
+                        <label for="usuario">Nombre de usuario:</label>
+                        <input type="text" id="usuario" name="usuario" class="input registro-input" placeholder="Tu nombre de usuario" required />
+                    </div>
+                    <div class="input-box registro-input-box">
+                        <label for="dni">DNI:</label>
+                        <input type="text" id="dni" name="dni" class="input registro-input" placeholder="Tu DNI" maxlength="8" oninput="validarDNI(this)" required />
+                    </div>
+                    <div class="input-box registro-input-box">
+                        <label for="nueva_clave">Contraseña:</label>
+                        <input type="password" id="nueva_clave" name="contrasena" class="input registro-input" placeholder="Contraseña nueva" required />
+                    </div>
+                    <div class="input-box registro-input-box">
+                        <label for="repetir_clave">Repetir contraseña:</label>
+                        <input type="password" id="repetir_clave" name="repetircontrasena" class="input registro-input" placeholder="Repite la contraseña" required />
+                        <div id="mensaje-error" style="display: none; color: red; margin-top: 5px;"></div>
+                    </div>
                 </div>
-    
-                <div class="input-box registro-input-box">
-                    <label for="apellidos">Apellidos:</label>
-                    <input type="text" id="apellidos" name="apellido" class="input registro-input" placeholder="Tus apellidos" required />
-                </div>
-    
-                <div class="input-box registro-input-box">
-                    <label for="correo">Correo electrónico:</label>
-                    <input type="email" id="correo" name="correo" class="input registro-input" placeholder="Tu correo electrónico" required />
-                </div>
-        
-                <div class="input-box registro-input-box">
-                    <label for="usuario">Nombre de usuario:</label>
-                    <input type="text" id="usuario" name="usuario" class="input registro-input" placeholder="Tu nombre de usuario" required />
-                    <h5>Ejemplo: user123 (nombre de usuario)</h5>
-                </div>
-                
-                <div class="input-box registro-input-box">
-                    <label for="dni">DNI:</label>
-                    <input type="text" id="dni" name="dni" class="input registro-input" placeholder="Tu DNI" maxlength="8" oninput="validarDNI(this)" required />
-                </div>
-    
-                <div class="input-box registro-input-box">
-                    <label for="nueva_clave">Contraseña:</label>
-                    <input type="password" id="nueva_clave" name="contrasena" class="input registro-input" placeholder="Contraseña nueva" required />
-                </div>
-                
-                <div class="input-box registro-input-box">
-                    <label for="repetir_clave">Repetir contraseña:</label>
-                    <input type="password" id="repetir_clave" name="repetircontrasena" class="input registro-input" placeholder="Repite la contraseña" required />
-                    <div id="mensaje-error" style="display: none; color: red; margin-top: 5px;"></div>
-                </div>
-    
                 <div class="remember-forgot registro-remember-forgot">
                     <a th:href="@{/login}">¿Ya tienes cuenta?</a>
                 </div>
                 <input type="submit" value="Registrarse" class="button-p" name="registro" id="submit-registro">
-            </form>    
-            <br>
-            <!--button id="boton">Buscar DNI</button>
-
-            <div class="res">
-                <input id="doc" readonly="" type="text">
-            </div>
-            <div class="res">
-                <input id="nombre" readonly="" type="text">
-            </div-->
+            </form>
         </div>
-    </div>    
+    </div>
 </body>
 <script>
     // Esperar 3 segundos y ocultar el mensaje
