--- a/src/main/resources/templates/components/nav_panel.html
+++ b/src/main/resources/templates/components/nav_panel.html
@@ -44,6 +44,7 @@
                  <span th:text="${session.usuario}"></span> <!-- Muestra el mensaje de bienvenida -->
                  <button class="toggle-logout" onclick="toggleLogout(event)" style="background: none; border: none; color: black; font-size: 20px;">▼</button> <!-- Botón para mostrar/ocultar el cierre de sesión -->
                  <div class="logout-container" style="display: none;">
+                    <a href="/micuenta" class="buttoncerrar">Mi cuenta</a>
                      <a href="/logout" class="buttoncerrar" title="Cerrar Sesión">Cerrar Sesión</a>
                  </div>
              </div>
