--- a/src/main/resources/templates/components/adminMenu.html
+++ b/src/main/resources/templates/components/adminMenu.html
@@ -8,6 +8,9 @@
     <div class="admin-menu">
         <div class="container-fluid">
             <h1 class="text-center menu-title">Menú de Administración</h1>
+            <div class="logout-container">
+                <a href="/logout" class="buttoncerrar" title="Cerrar Sesión">Cerrar Sesión</a>
+            </div>
             <div class="row justify-content-center">
                 <!-- Primera columna -->
                 <div class="col-md-4">
