--- a/src/main/resources/templates/components/adminMenu.html
+++ b/src/main/resources/templates/components/adminMenu.html
@@ -26,6 +26,11 @@
                             Gestión de Empleados
                         </a>
                     </div>
+                    <div class="menu-item">
+                        <a href="/templates/reporte_productos">
+                            <i class="fas fa-box"></i>
+                            Reporte de Productos</a>
+                    </div>
                 </div>
                 
                 <!-- Segunda columna -->
